Added shapley values to rest scorer endpoint
