# aws-sagemaker-hosted-scorer/src/main/java/ai/h2o/mojos/deploy/sagemaker/hosted/controller/ModelsApiController.java
@@ -53,7 +53,7 @@ public class ModelsApiController implements ModelApi {
 
   @Override
   @RequestMapping("/invocations")
-  public ResponseEntity<ScoreResponse> getScore(ScoreRequest request) {
+  public ResponseEntity<ScoreResponse> getScore(ScoreRequest request, Boolean shapleyResults) {
     try {
       log.info("Got scoring request");
       return ResponseEntity.ok(scorer.score(request));
