# common/swagger/swagger.yaml
@@ -76,6 +76,11 @@ paths:
       produces:
         - application/json
       parameters:
+        - in: query
+          name: shapley_results
+          type: boolean
+          required: false
+          description: The boolean to say if Shap values are needed.
         - name: payload
           in: body
           required: true
@@ -203,6 +208,27 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/Row'
+      input_shapley_contributions:
+        type: object
+        items:
+          $ref: '#/definitions/ShapleyResponse'
+  ShapleyResponse:
+    description: >
+      An Object that contains list of columns along with their shap values
+    type: object
+    properties:
+      fields:
+        description: >
+              An array holding the names of fields in the order of appearance in the rows of the  `contributions` property.
+        type: array
+        items:
+          type: string
+      contributions:
+        description: >
+              An array of rows consisting of the shapley contributions output corresponding to columns in the fields
+        type: array
+        items:
+              $ref: '#/definitions/Row'
   DataField:
     type: object
     properties:
