# common/transform/src/main/java/ai/h2o/mojos/deploy/common/transform/MojoFrameToResponseConverter.java
@@ -7,6 +7,7 @@ import static java.util.Collections.emptySet;
 import ai.h2o.mojos.deploy.common.rest.model.Row;
 import ai.h2o.mojos.deploy.common.rest.model.ScoreRequest;
 import ai.h2o.mojos.deploy.common.rest.model.ScoreResponse;
+import ai.h2o.mojos.deploy.common.rest.model.ShapleyResponse;
 import ai.h2o.mojos.runtime.frame.MojoFrame;
 import com.google.common.base.Strings;
 import java.util.ArrayList;
@@ -44,6 +45,24 @@ public class MojoFrameToResponseConverter
     }
 
     return response;
+  }
+
+  /**
+   * Converts the resulting shap values {@link MojoFrame} into the API response object {@link
+   * ShapleyResponse}.
+   */
+  public ShapleyResponse getShapleyResponse(MojoFrame shapleyMojoFrame) {
+    List<Row> outputRows = Stream.generate(Row::new).limit(shapleyMojoFrame.getNrows())
+            .collect(Collectors.toList());
+    copyResultFields(shapleyMojoFrame, outputRows);
+
+    ShapleyResponse contributions = new ShapleyResponse();
+    contributions.setContributions(outputRows);
+
+    List<String> outputFieldNames = new ArrayList<>(asList(shapleyMojoFrame.getColumnNames()));
+    contributions.setFields(outputFieldNames);
+
+    return contributions;
   }
 
   private static void copyFilteredInputFields(
